src/main/default/objects/Feature__mdt/Feature__mdt.object-meta.xml
<CustomObject>
    <description>An abstraction of an Apex feature that you want to turn on/off in different environments</description>
    <label>Feature</label>
    <pluralLabel>Features</pluralLabel>
</CustomObject>