src/main/default/objects/Feature__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>The environment in which this feature is enabled or disabled</description>
    <inlineHelpText>The environment in which this feature is enabled or disabled</inlineHelpText>
    <label>Environment</label>
    <referenceTo>Environment__mdt</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Features</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>