src/main/default/objects/Feature__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FeatureEnabled</label>
    <type>Checkbox</type>
</CustomField>