src/main/default/objects/Feature__mdt/fields/SharedFeatureName__c.field-meta.xml
<CustomField>
    <fullName>SharedFeatureName__c</fullName>
    <description>The &quot;True&quot; name of the feature. Which will be the same for multiple feature records with different environments</description>
    <inlineHelpText>The &quot;True&quot; name of the feature. Which will be the same for multiple features records with different environments</inlineHelpText>
    <label>SharedFeatureName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>