src/main/default/objects/Feature__mdt/listViews/Feature_View.listView-meta.xml
<ListView>
    <fullName>Feature_View</fullName>
    <columns>MasterLabel</columns>
    <columns>SharedFeatureName__c</columns>
    <columns>Environment__c</columns>
    <columns>Is_Enabled__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>Feature View</label>
</ListView>